# OpenGL-project

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cmake/api/v1/reply/: cache-v2-55d2aa16b2001b117f17.json  codemodel-v2-fb183de0b88f5154c710.json  index-2022-06-23T09-40-26-0114.json  target-2022_03_30-Debug-387c446eeb85501f9de8.json
resources/: Skull.mtl  bete.mtl  cube.mtl
shaders/: triangle.fs  triangle.vs
src/: DragonData.h  Game.cpp  Game.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  Vertex.h  loader.cpp  loader.h  main.cpp  main.h
src/common/: GLShader.cpp  GLShader.h
